# Splat

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251025_152142_create_users_table.rs  m20251026_173652_create_bills_table.rs  m20251026_181348_create_user_bills_joined_table.rs  m20251028_093342_create_billee_table.rs  m20251031_101521_create_banks_table.rs  m20251031_173354_create_wallet_table.rs
src/: main.rs
src/db/: db.rs
src/dto/: dto.rs  enums.rs  mod.rs  requests.rs
src/entities/: bank.rs  billee.rs  bills.rs  mod.rs  prelude.rs  user.rs  user_bills_joined.rs  wallet.rs
src/errors/: error.rs
src/middleware/: auth_middleware.rs  client.rs  http_client.rs  mod.rs
src/services/: auth_service.rs  bank_service.rs  billee_service.rs  bills_service.rs  mod.rs  payment_service.rs  wallet_service.rs
src/utils/: bills_utils.rs  mapper.rs  mod.rs  user_utils.rs
