[package]
name = "bill-splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bcrypt = "0.17.1"
jsonwebtoken = {version = "10.0.0",  features = ["rust_crypto"]}
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
migration = { path = "./migration"}
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
once_cell = "1.21.3"
futures = "0.3.31"

[dev-dependencies]
sea-orm-migration = "1.1.17"
